@@ -1,3 +1,8 @@
+2013-01-13  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/54286
+	* gfortran.dg/proc_ptr_result_8.f90 : New test.
+
 2013-01-13  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* gcc.dg/unroll_5.c: Add nomips16 attributes.
